# huffman

./: CMakeLists.txt
lib/: huffman.cpp  huffman.h
test/: test.cpp
test/gtest/: gtest_main.cc
util/: util.cpp
